--- a/privacy/index.html
+++ b/privacy/index.html
@@ -40,7 +40,7 @@
                     552 Archer Street<br>
                     Freeport, NY 11520<br>
                     Email: <a href="mailto:privacy@mocview.com">privacy@mocview.com</a><br>
-                    Website: <a href="https://mocview-web-client-v2-ty56.vercel.app/">https://mocview-web-client-v2-ty56.vercel.app/</a></p>
+                    Website: <a href="https://mocview-web-client-v2-ty56.vercel.app/">mocview.app</a></p>
 
                     <p>MOCVIEW is a virtual communication platform that helps professionals create authentic video introductions (VPx), practice interview skills, and connect with opportunities. Our platform serves:</p>
                     <ul>
